Update TestEncoder.java