@@ -1,14 +1,14 @@
 import org.junit.jupiter.api.Test;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class TestEncoder {
 
     @Test
-    public void testEncode() throws UnsupportedEncodingException {
-        String url = "https://baidu.com+";
-        String encodeUrl = URLEncoder.encode(url, "UTF-8");
+    public void testEncode() {
+        String url = "https://baidu.com?op=+";
+        String encodeUrl = URLEncoder.encode(url, StandardCharsets.UTF_8);
         System.out.println(encodeUrl);
 
     }
